Add GET tags route to fetch all tags of a user
